# auto-loops-books

./: .gitmodules  AGENTS.md  AI Compiler Performance Engineering.md  README.md  book_agent_rewrite.py  book_batch_complete.py  book_content.md  book_loop.py  book_pad_dedup.py  book_prepare.py  book_proper_nouns.py  book_prose_upgrade.py  book_results.tsv  book_spec_audit.py  book_visuals.py  citation_loop.py  fact_verify.py  outline_extended.json  program_books.md  pyproject.toml  research_tools.py
.github/workflows/: book.yml
books/: FACT_VERIFICATION.md  README.md  WRITING_STYLE.md  book.bib  build_chapter.py  chapter_preamble.tex  citations_merged.bib  main.tex  make-chapter.sh  make.sh  math_commands.tex  notation.tex  resize_cover.sh  settings.tex  visuals_macros.tex  visuals_style.py  visuals_style.tex
books/chapters/: ch01_llm_decode_bottlenecks.tex  ch02_dataflow_mindset.tex  ch03_hardware_constraints.tex  ch04_cuda_hopper_blackwell.tex  ch05_xdna_aie_architecture.tex  ch06_onchip_residency_design.tex  ch07_static_role_assignment.tex  ch08_tma_double_buffer.tex  ch09_sync_hierarchy.tex  ch10_online_softmax.tex  ch11_decoder_megakernel.tex  ch12_execution_modes.tex  ch13_compiler_theory.tex  ch14_mlir.tex  ch15_xla.tex  ch16_tvm.tex  ch17_triton.tex  ch18_iree.tex  ch19_glow.tex  ch20_mirage_emerging.tex  ch21_compiler_benchmark.tex  ch22_e2e_tuning_workflow.tex  ch23_llm_moe_compilation.tex  ch24_heterogeneous_deployment.tex  ch25_auto_optimization.tex  ch26_production_practices.tex  (+1 more)
loops/: README.md  __init__.py  iterate.py  loop_state.json
(+582 files in other folders)
