[project]
name = "autoresearch-mlx"
version = "0.1.0"
description = "Apple Silicon MLX port of Karpathy's autoresearch"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "crawl4ai>=0.8.0",
    "mlx>=0.30.0",
    "numpy>=2.2.6",
    "pyarrow>=21.0.0",
    "regex>=2025.7.34",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
]

[project.scripts]
book-loop = "loops.iterate:main"
fact-verify = "fact_verify:main"
research-tools = "research_tools:main"
citation-loop = "citation_loop:main"
proper-nouns = "book_proper_nouns:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loops"]
py-modules = ["fact_verify", "book_proper_nouns", "research_tools", "book_prepare", "citation_loop"]

[tool.uv]
package = true
